--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,7 +7,9 @@ output:
   html_document:
     keep_md: true
 ---
-
+Reproducible Research: Peer Assessment-01
+=========================================
+Created by "Prabhat Kumar" on "18 July 2015".
 
 ## Loading and preprocessing the data
 
