--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -43,6 +43,8 @@ ggplot(noNA, aes(date, steps)) + geom_bar(stat = "identity", colour = "steelblue
   ```{r}
   median(totalSteps)
   ```
+
+
 ## What is the average daily activity pattern?
 
 * Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
@@ -60,7 +62,61 @@ avgSteps[avgSteps$meanOfSteps == max(avgSteps$meanOfSteps), ]
 
 
 ## Imputing missing values
+## Imputing missing values
+* The total number of rows with NAs:
 
+```{r}
+sum(is.na(data))
+```
+
+* Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+My strategy is to use the mean for that 5-minute interval to fill each NA value in the steps column.
+
+* Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+```{r}
+newData <- data 
+for (i in 1:nrow(newData)) {
+    if (is.na(newData$steps[i])) {
+        newData$steps[i] <- avgSteps[which(newData$interval[i] == avgSteps$interval), ]$meanOfSteps
+    }
+}
+
+head(newData)
+sum(is.na(newData))
+```
+
+* Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. 
+
+```{r}
+ggplot(newData, aes(date, steps)) + geom_bar(stat = "identity",
+                                             colour = "steelblue",
+                                             fill = "steelblue",
+                                             width = 0.7) + facet_grid(. ~ month, scales = "free") + labs(title = "Histogram of Total Number of Steps Taken Each Day (no missing data)", x = "Date", y = "Total number of steps")
+```
+
+* Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+Mean total number of steps taken per day:
+```{r}
+newTotalSteps <- aggregate(newData$steps, list(Date = newData$date), FUN = "sum")$x
+newMean <- mean(newTotalSteps)
+newMean
+```
+Median total number of steps taken per day:
+```{r}
+newMedian <- median(newTotalSteps)
+newMedian
+```
+Compare them with the two before imputing missing data:
+```{r}
+oldMean <- mean(totalSteps)
+oldMedian <- median(totalSteps)
+newMean - oldMean
+newMedian - oldMedian
+```
+So, after imputing the missing data, the new mean of total steps taken per day is the same as that of the old mean; the new median of total steps taken per day is greater than that of the old median.
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
